# lance

./: .bumpversion.toml  .coderabbit.yaml  .gitattributes  .gitignore  .pre-commit-config.yaml  .typos.toml  404.html  AGENTS.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RUST_THIRD_PARTY_LICENSES.html  about.toml  clippy.toml  deny.toml  index.html  release_process.md  rust-toolchain.toml  sitemap.xml  test_debug.py
.cargo/: config.toml
.github/: CODEOWNERS  dependabot.yml  labeler-area.yml  labeler-issues.yml  labeler.yml  release.yml
ci/: coverage.py  create_rc.sh  create_rc_discussion.sh  create_release_branch.sh  generate_release_notes.py  new_contributors.py  (+3 more)
memtest/: .gitignore  Cargo.toml  Makefile  README.md  pyproject.toml
memtest/python/memtest/: __init__.py  __main__.py
memtest/python/tests/: __init__.py  test_basic.py  test_integration.py
memtest/src/: allocator.rs  lib.rs  stats.rs
memtest/tests/: integration_test.rs
python/: AGENTS.md  CONTRIBUTING.md  Cargo.toml  DEVELOPMENT.md  Makefile  PYTHON_THIRD_PARTY_LICENSES.md  README.md  RUST_THIRD_PARTY_LICENSES.html  pyproject.toml
python/.cargo/: config.toml
python/python/benchmarks/: test_blob.py  test_file.py  test_search.py  test_take.py  zone_map_seeds.py
python/python/ci_benchmarks/: README.md  benchmark.py  conftest.py  datasets.py  utils.py
python/python/ci_benchmarks/benchmarks/: test_fts_search.py  test_index_training.py  test_indexing.py  test_ivf_pq_search.py  test_random_access.py  test_search.py
python/python/ci_benchmarks/datagen/: basic.py  gen_all.py  lineitems.py  wikipedia.py
python/python/lance/: __init__.py  _datagen.py  arrow.py  blob.py  dataset.py  dependencies.py  download.py  file.py  fragment.py  io.py  mem_wal.py  namespace.py  optimize.py  otel.py  progress.py  types.py  udf.py  util.py  vector.py
python/python/lance/indices/: __init__.py  builder.py  ivf.py  pq.py
python/python/lance/lance/: __init__.pyi  optimize.pyi  schema.pyi
python/python/lance/lance/indices/: __init__.pyi
python/python/lance/tf/: data.py
python/python/lance/torch/: data.py  distance.py
python/python/tests/: conftest.py  test_arrow.py  test_blob.py  test_coerce_query_vector.py  test_column_names.py  test_commit_index.py  test_create_empty_index.py  test_dataset.py  test_delta.py  test_file.py  test_filter.py  test_fragment.py  test_geo.py  test_huggingface.py  test_indices.py  test_ingestion.py  test_integration.py  test_json.py  test_lance.py  test_log.py  test_map_type.py  test_mem_wal.py  test_memory.py  test_memory_leaks.py  test_multi_base.py  test_namespace_dir.py  test_namespace_integration.py  test_namespace_rest.py  test_optimize.py  test_otel.py  test_s3_ddb.py  test_scalar_index.py  test_schema.py  test_schema_evolution.py  test_table_ops.py  test_table_provider.py  test_tf.py  test_vector.py  test_vector_index.py
python/python/tests/compat/: compat_decorator.py  compat_sequence.py  test_file_formats.py  test_index_sequence.py  test_scalar_indices.py  test_vector_indices.py  test_venv_manager.py  util.py  venv_manager.py  venv_runner.py
python/python/tests/models/lindera/: README.md
python/python/tests/models/lindera/invalid_dict/: config.yml
python/python/tests/models/lindera/invalid_dict2/: config.yml
python/python/tests/models/lindera/load_config_priority/: config.yml
python/python/tests/models/lindera/user_dict/: config.yml
python/python/tests/models/lindera/user_dict2/: config.yml
python/python/tests/torch_tests/: test_data.py  test_torch_kmeans.py
python/src/: arrow.rs  blob.rs  datagen.rs  dataset.rs  debug.rs  error.rs  executor.rs  file.rs  fragment.rs  indices.rs  lib.rs  mem_wal.rs  namespace.rs  otel.rs  scanner.rs  schema.rs  session.rs  storage_options.rs  tracing.rs  transaction.rs  utils.rs
python/src/dataset/: blob.rs  cleanup.rs  commit.rs  io_stats.rs  optimize.rs  stats.rs
rust/arrow-scalar/: Cargo.toml  README.md
rust/arrow-scalar/src/: convert.rs  lib.rs  serde.rs
rust/arrow-stats/: Cargo.toml  README.md
rust/arrow-stats/proptest-regressions/: lib.txt
rust/arrow-stats/src/: lib.rs  nan.rs
rust/lance-datafusion/: Cargo.toml  build.rs
rust/lance-datafusion/src/: aggregate.rs  chunker.rs  datagen.rs  exec.rs  expr.rs  lib.rs  logical_expr.rs  planner.rs  projection.rs  spill.rs  sql.rs  substrait.rs  udf.rs  utils.rs
rust/lance-datafusion/src/udf/: json.rs
rust/lance-datafusion/src/utils/: background_iterator.rs
rust/lance-geo/: Cargo.toml
rust/lance-geo/src/: bbox.rs  lib.rs
rust/lance-index-core/: Cargo.toml  README.md
rust/lance-index-core/src/: lib.rs  scalar.rs
rust/lance-namespace-datafusion/: Cargo.toml  README.md
rust/lance-namespace-datafusion/src/: catalog.rs  error.rs  lib.rs  namespace_level.rs  schema.rs  session_builder.rs
rust/lance-namespace-datafusion/tests/: sql.rs
rust/lance-namespace-impls/: BENCHMARK.md  Cargo.toml  README.md
rust/lance-namespace-impls/benches/: manifest_commit_sweep.sh
rust/lance-namespace-impls/examples/: manifest_bench.rs
rust/lance-namespace-impls/src/: connect.rs  context.rs  credentials.rs  dir.rs  lib.rs  rest.rs  rest_adapter.rs
rust/lance-namespace-impls/src/credentials/: aws.rs  azure.rs  cache.rs  gcp.rs
rust/lance-namespace-impls/src/dir/: manifest.rs  manifest_feature_flags.rs
rust/lance-select/: Cargo.toml
rust/lance-select/benches/: index_expr_result.rs  row_addr_mask.rs
rust/lance-select/src/: lib.rs  mask.rs  result.rs
rust/lance-select/src/mask/: nullable.rs
rust/lance-tokenizer/: Cargo.toml  README.md
rust/lance-tokenizer/src/: alphanum_only.rs  analyzer.rs  ascii_folding_filter.rs  code_tokenizer.rs  icu.rs  jieba.rs  lib.rs  lindera.rs  lower_caser.rs  ngram_tokenizer.rs  raw_tokenizer.rs  remove_long.rs  simple_tokenizer.rs  stemmer.rs  stop_word_filter.rs  tokenizer_api.rs  whitespace_tokenizer.rs  word_delimiter_filter.rs
rust/lance-tokenizer/src/stop_word_filter/: stopwords.rs
test_data/fri_straddle_pre_6610/datagen/: Cargo.toml
test_data/fri_straddle_pre_6610/datagen/src/: main.rs
(+1227 files in other folders)
