[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lance-memtest"
version = "0.1.0"
description = "Memory allocation testing utilities for Python test suites"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [
    { name = "Lance Developers" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
]

[project.scripts]
lance-memtest = "memtest.__main__:main"

[tool.setuptools]
packages = ["memtest"]

[tool.setuptools.package-dir]
memtest = "python/memtest"

[tool.setuptools.package-data]
memtest = ["*.so", "*.dylib", "*.dll"]
