[package]
name = "lance-namespace-impls"
description = "Lance Namespace Implementations"
readme = "README.md"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true
rust-version.workspace = true

[features]
default = ["dir-aws", "dir-azure", "dir-gcp", "dir-oss", "dir-huggingface"]
rest = ["dep:reqwest"]
rest-adapter = ["dep:axum", "dep:tower", "dep:tower-http", "dep:serde"]
# Cloud storage features for directory implementation - align with lance-io
dir-gcp = ["lance-io/gcp", "lance/gcp"]
dir-aws = ["lance-io/aws", "lance/aws"]
dir-azure = ["lance-io/azure", "lance/azure"]
dir-oss = ["lance-io/oss", "lance/oss"]
dir-huggingface = ["lance-io/huggingface", "lance/huggingface"]
# Credential vending features
credential-vendor-aws = ["dep:aws-sdk-sts", "dep:aws-config", "dep:aws-credential-types"]
credential-vendor-gcp = ["dep:google-cloud-auth", "dep:reqwest", "dep:serde"]
credential-vendor-azure = ["dep:azure_core", "dep:azure_identity", "dep:azure_storage", "dep:azure_storage_blobs", "dep:time"]

[dependencies]
lance-namespace.workspace = true
lance-core.workspace = true

# REST implementation dependencies (optional, enabled by "rest" feature)
reqwest = { version = "0.12", optional = true, default-features = false, features = [
    "json",
    "charset",
    "gzip",
    "http2",
    "stream",
    "rustls-tls-native-roots",
] }
# Directory implementation dependencies (always enabled)
url = { workspace = true }
lance = { workspace = true }
lance-index = { workspace = true }
lance-io = { workspace = true }
object_store = { workspace = true }
arrow = { workspace = true }
arrow-ipc = { workspace = true }
arrow-schema = { workspace = true }

# REST adapter implementation dependencies (optional, enabled by "rest-adapter" feature)
axum = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
tower-http = { workspace = true, optional = true, features = ["trace", "cors", "normalize-path"] }
serde = { workspace = true, optional = true }

# Common dependencies
async-trait.workspace = true
bytes.workspace = true
snafu.workspace = true
tokio = { workspace = true, features = ["sync", "full"] }
serde_json = { workspace = true }
futures.workspace = true
log.workspace = true
rand.workspace = true
chrono.workspace = true

# AWS credential vending dependencies (optional, enabled by "dir-aws" feature)
aws-sdk-sts = { version = "1.38.0", optional = true }
aws-config = { workspace = true, optional = true }
aws-credential-types = { workspace = true, optional = true }

# GCP credential vending dependencies (optional, enabled by "dir-gcp" feature)
google-cloud-auth = { version = "0.18", optional = true }

# Azure credential vending dependencies (optional, enabled by "dir-azure" feature)
azure_core = { version = "0.21", optional = true }
azure_identity = { version = "0.21", optional = true }
azure_storage = { version = "0.21", optional = true }
azure_storage_blobs = { version = "0.21", optional = true }
time = { version = "0.3", optional = true }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
tempfile.workspace = true
wiremock.workspace = true
arrow = { workspace = true }
arrow-ipc = { workspace = true }
rstest.workspace = true

[lints]
workspace = true
